sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
var int i=0
def bubbleSort()  {
	var int l =getNombreValeurs()
	for(i<-0 to l-2){
		while(echange(i,i-1){

				if(getValeur(i+1)<getVAleur(i))
				echange(i,i+1)
		}
	}
	 
	
	}
	
